<resources>
    <string name="app_name">MyTVApplication</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>


    <string name="main_app_open_error">打开APP失败</string>


    <string name="day_1">星期一,</string>
    <string name="day_2">星期二,</string>
    <string name="day_3">星期三,</string>
    <string name="day_4">星期四,</string>
    <string name="day_5">星期五,</string>
    <string name="day_6">星期六,</string>
    <string name="day_7">星期日,</string>

    <string name="day_am">上午</string>
    <string name="day_pm">下午</string>


    <string name="MONTH_1">一月</string>
    <string name="MONTH_2">二月</string>
    <string name="MONTH_3">三月</string>
    <string name="MONTH_4">四月</string>
    <string name="MONTH_5">五月</string>
    <string name="MONTH_6">六月</string>
    <string name="MONTH_7">七月</string>
    <string name="MONTH_8">八月</string>
    <string name="MONTH_9">九月</string>
    <string name="MONTH_10">十月</string>
    <string name="MONTH_11">十一月</string>
    <string name="MONTH_12">十二月</string>


    <string name="baiban">白板</string>
    <string name="wenjian">文件</string>
    <string name="fenxiang">分享</string>




    <string name="applications">应用</string>
    <string name="recentapplications">最近的应用</string>
    <string name="screenshot">屏幕截图</string>
    <string name="clearall">全部清除</string>


    <string name="input">输入</string>
    <string name="window">视窗</string>
    <string name="recent">最近</string>
    <string name="apps">应用</string>
    <string name="browser">浏览器</string>
    <string name="setting">设置</string>
    <string name="lock">锁屏</string>


    //弹出框
    <string name="home">主页</string>
    <string name="back">返回</string>
    <string name="annotate">标注</string>
    <string name="capture">照片</string>
    <string name="freeze">冻结</string>
    <string name="controlpanel">控制\n面板</string>

</resources>