<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="80px"
    android:layout_height="wrap_content"
    android:layout_gravity="left|bottom"
    android:orientation="vertical">

<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:cardCornerRadius="@dimen/dialog_message_round_size"-->
<!--        app:cardElevation="0px">-->

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/rv_menu_list"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:overScrollMode="never"-->
<!--            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--            tools:listitem="@layout/item_menu" />-->

<!--    </androidx.cardview.widget.CardView>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="150px"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/default_color">
            <LinearLayout
                android:id="@+id/sidebar_btn1"
                android:layout_width="match_parent"
                android:layout_height="58px"
                android:layout_marginTop="10px"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24px"
                    android:src="@mipmap/sidebar1"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2px"
                    android:text="@string/home"
                    android:textSize="10px"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sidebar_btn2"
                android:layout_width="match_parent"
                android:layout_height="58px"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24px"
                    android:src="@mipmap/sidebar2"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2px"
                    android:text="@string/back"
                    android:textSize="10px"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sidebar_btn3"
                android:layout_width="match_parent"
                android:layout_height="58px"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24px"
                    android:src="@mipmap/sidebar3"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2px"
                    android:text="@string/annotate"
                    android:textSize="10px"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sidebar_btn4"
                android:layout_width="match_parent"
                android:layout_height="58px"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24px"
                    android:src="@mipmap/sidebar4"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2px"
                    android:text="@string/capture"
                    android:textSize="10px"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sidebar_btn5"
                android:layout_width="match_parent"
                android:layout_height="58px"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24px"
                    android:src="@mipmap/sidebar5"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2px"
                    android:text="@string/freeze"
                    android:textSize="10px"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sidebar_btn6"
                android:layout_width="match_parent"
                android:layout_height="58px"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24px"
                    android:src="@mipmap/sidebar6"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2px"
                    android:text="@string/recent"
                    android:textSize="10px"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sidebar_btn7"
                android:layout_width="match_parent"
                android:layout_height="58px"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24px"
                    android:src="@mipmap/sidebar7"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2px"
                    android:gravity="center"
                    android:text="@string/controlpanel"
                    android:textSize="10px"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sidebar_btn8"
                android:layout_width="match_parent"
                android:layout_height="58px"
                android:orientation="vertical"
                android:layout_marginBottom="10px"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24px"
                    android:src="@mipmap/sidebar8"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2px"
                    android:text="@string/input"
                    android:textSize="10px"
                    android:textColor="@color/text_color"/>
            </LinearLayout>

        </LinearLayout>


        <ImageView
            android:id="@+id/sidebar_back"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:layout_marginTop="4px"
            android:src="@mipmap/left_fold_p"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>

    </LinearLayout>





</LinearLayout>